[tool.poetry]
name = "textstat-docs"
version = "0.1.0"
description = "Documentation for Textstat"
authors = ["Alex Ward <alxwrd@googlemail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^7.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
